ROMControl - AOKP animations: Add and entry for  TRANSIT_TASK_OPEN_BEHIND [2/2]
Change-Id: I554b13eb049032ec61366331a1d396cec4e4fb97
Signed-off-by: STELIX <ssspinni@gmail.com>

--- a/res/xml/bootleg_dumpster_animations.xml
+++ b/res/xml/bootleg_dumpster_animations.xml
@@ -62,6 +62,10 @@
             android:key="task_move_to_back"
             android:title="@string/task_move_to_back_title" />
 
+        <ListPreference
+            android:key="task_open_behind"
+            android:title="@string/task_open_behind_title" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
