ROMControl - Add option to disable scrolling cache [2/2]
scrolling cache can cause performance lag due to GC
allow user to enable/disable/force scrolling cache on the fly
via Settings > CM > Performance > Scrolling cache
see the framework part at http://review.cyanogenmod.com/#change,12302

Original commit from way back in 2012
nadlabak/android_packages_apps_CMParts@2c10284

Change-Id: Id7a1752757291d9aef86437f7886de7351877521

--- a/res/xml/bootleg_dumpster_animations.xml
+++ b/res/xml/bootleg_dumpster_animations.xml
@@ -101,6 +101,14 @@
         android:title="@string/animations_ui_misc"
         android:key="anim_misc_stuff">
 
+    <ListPreference
+        android:key="pref_scrollingcache"
+        android:dialogTitle="@string/pref_scrollingcache_title"
+        android:title="@string/pref_scrollingcache_title"
+        android:summary="@string/pref_scrollingcache_summary"
+        android:entries="@array/entries_scrollingcache"
+        android:entryValues="@array/values_scrollingcache" />
+
     <com.bootleggers.dumpster.preferences.GlobalSettingSwitchPreference
         android:key="system_default_animation"
         android:title="@string/system_default_animation_title"
