ROMControl - Allow toggling animations off [2/2]
Allows for toggling the animations that comes by default with Android L,
such as the open app animation, or other transition animations. This
effect is the same as when it goes into low power mode, except nothing
else is affected.

A change in framework/base is also required.

Change-Id: I85b89954ab0bba0b86edcb85d2b5721e45e09f0e
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/res/xml/bootleg_dumpster_animations.xml
+++ b/res/xml/bootleg_dumpster_animations.xml
@@ -101,6 +101,12 @@
         android:title="@string/animations_ui_misc"
         android:key="anim_misc_stuff">
 
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="disable_transition_animations"
+        android:title="@string/disable_animations"
+        android:summary="@string/disable_animations_summary"
+        android:defaultValue="false" />
+
     <ListPreference
         android:key="pref_scrollingcache"
         android:dialogTitle="@string/pref_scrollingcache_title"
