dumpster: Move Shutdown animations into animations
That's the right place

--- a/res/xml/bootleg_dumpster_animations.xml
+++ b/res/xml/bootleg_dumpster_animations.xml
@@ -79,6 +79,13 @@
         android:entryValues="@array/toast_animation_values"
         android:persistent="false" />
 
+    <ListPreference
+        android:key="screen_off_animation"
+        android:title="@string/screen_off_animation_title"
+        android:entries="@array/screen_off_animation_entries"
+        android:entryValues="@array/screen_off_animation_values"
+        android:persistent="false"/>
+
         <ListPreference
             android:key="wallpaper_open"
             android:title="@string/wallpaper_open_title" />
