dumpster: fixes for gesture stuff and lockscreen ui check

--- a/res/xml/bootleg_dumpster_gestures.xml
+++ b/res/xml/bootleg_dumpster_gestures.xml
@@ -34,6 +34,8 @@
         android:summary="@string/gesture_anywhere_summary"
         android:fragment="com.bootleggers.dumpster.gestureanywhere.GestureAnywhereSettings" />
 
+    </PreferenceCategory>
+
     <PreferenceCategory
         android:key="gest_misc"
         android:title="@string/misc_title">
