The no-no messages: The strings
This will notify the users that see a feature disabled why is it disabled, i mean, come on

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -145,6 +145,11 @@
     <!-- Gesture stuff -->
     <string name="gestures_main_category">System Gestures</string>
 
+    <!-- The no-no list, messages explaining why some features are disabled -->
+    <string name="no_no_summary_locked">This feature is unavailable because you don\'t have a secured lockscreen. </string>
+    <string name="no_no_summary_go">This feature is unavailable because you have Android Go enabled.</string>
+    <string name="no_no_summary_owner">This feature is unavailable because you don\'t have an owner info message</string>
+
     <!-- Color Picker -->
     <string name="dialog_color_picker">Color Picker</string>
     <string name="press_color_to_apply">Press on color below to apply</string>
