--- a/res/xml/bootleg_dumpster_power.xml
+++ b/res/xml/bootleg_dumpster_power.xml
@@ -84,6 +84,12 @@
         android:key="pwermenu_misc"
         android:title="@string/misc_title">
 
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="powermenu_lockscreen"
+        android:title="@string/powermenu_lockscreen_title"
+        android:summary="@string/powermenu_lockscreen_summary"
+        android:defaultValue="true" />
+
          <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
             android:key="wallpaper_power_menu_tint"
             android:title="@string/wallpaper_tint_power_menu"
