--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -1097,10 +1097,18 @@
     <string name="lockscreen_clock_selection_analog_deadpool">Analog (deadpool)</string>
     <string name="lockscreen_clock_selection_sammy">Sammy</string>
     <string name="lockscreen_clock_selection_sammy_bold">Sammy (bold)</string>
+    <string name="lockscreen_clock_selection_sammy_accent">Sammy Accent</string>
+    <string name="lockscreen_clock_selection_sammy_accent_alt">Sammy Accent (alt)</string>
+    <string name="lockscreen_clock_selection_shishu">Shishu Dreams</string>
+    <string name="lockscreen_clock_selection_shishu_inmensity">Shishu Inmensity</string>
     <string name="lockscreen_date_selection_title">Date style</string>
     <string name="lockscreen_date_selection_default">Default</string>
     <string name="lockscreen_date_selection_str_box">Semi-transparent box</string>
     <string name="lockscreen_date_selection_str_round">Semi-transparent box (round)</string>
+    <string name="lockscreen_date_selection_str_accent">Rounded, simple and with accent</string>
+    <string name="lockscreen_date_selection_str_accent_day">Rounded, simple and with accent (alt)</string>
+    <string name="lockscreen_date_selection_str_accent_transparent">Rounded, transparent and with accent</string>
+    <string name="lockscreen_date_selection_str_accent_transparent_day">Rounded, transparent and with accent (alt)</string>
 
     <!-- Notification count -->
     <string name="status_bar_notif_count_title">Show notification count</string>
