Custom Rounded Corner and Padding preferences [2/2]
Extensions: Add Runtime Rounded Corner preferences

Change-Id: I6dd7b0c3b8fce13c738f2239ba5504b14d1cc568
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

RoundCornerPreferences: Use frameworks default values

Change-Id: Ib5ad571bec311b75bc138bae238e5ca8ee005358
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

RoundCornerPreferences: Evaluate framework values correctly

Change-Id: I81d9830d4cfc76a568d6862c344c1f44666e3bc9
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

Allow using framework values for rounded corners [2/2]

Change-Id: I04ac74f7ea2062dfe7c3a783bdb08b65cb774d34
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

RoundCorners: Allow radius to reach 60

- Some devices have almost 50. Allow configuring a bit over this.

Change-Id: I3cd485c178d74f507e78c9ad173a73d1650a7561
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -74,6 +74,36 @@
      </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="corners_category"
+        android:title="@string/corners_category" >
+
+        <com.bootleggers.dumpster.preferences.SecureSettingSwitchPreference
+            android:key="sysui_rounded_fwvals"
+            android:title="@string/corner_fwvals"
+            android:summary="@string/corner_fwvals_summary"
+            android:defaultValue="true"
+            android:disableDependentsState="true" />
+
+        <com.bootleggers.dumpster.preferences.CustomSeekBarPreference
+            android:key="sysui_rounded_size"
+            android:title="@string/corner_radius"
+            android:max="60"
+            settings:min="0"
+            settings:units=""
+            android:persistent="false"
+            android:dependency="sysui_rounded_fwvals" />
+
+        <com.bootleggers.dumpster.preferences.CustomSeekBarPreference
+            android:key="sysui_rounded_content_padding"
+            android:title="@string/content_padding"
+            android:max="10"
+            settings:min="0"
+            settings:units=""
+            android:persistent="false"
+            android:dependency="sysui_rounded_fwvals" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="statusbar_battery_icon"
         android:title="@string/battery_style_category_title">
 
