fries: notch-city: Add 3 mode display cutout handler [3/3]
[@AgentFabulous - POSP]
- Add the respective control in here
- Also add a little video illustration I made to go along with it :)

Change-Id: I38fb439046db010b8b45f2bf9b83b7ce8879e044
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -64,6 +64,12 @@
         android:defaultValue="false" />
 
     <Preference
+        android:key="cutout_settings"
+        android:title="@string/cutout_main"
+        android:summary="@string/cutout_main_summary"
+        android:fragment="com.bootleggers.dumpster.external.CutoutFragment" />
+
+    <Preference
             android:title="@string/statusbar_tuner_title"
             android:summary="@string/statusbar_tuner_summary">
         <intent android:action="android.intent.action.MAIN"
