Active edge settings [3/6]
Change-Id: I8fb0a4d78d4cc442e5f5f9e2f755d7db49a13303

--- a/res/values/bootleg_config.xml
+++ b/res/values/bootleg_config.xml
@@ -19,4 +19,7 @@
     <!-- Whether to display device extras -->
     <bool name="has_device_extras">false</bool>
 
+    <!-- Whether to display active edge category -->
+    <bool name="has_active_edge">false</bool>
+
 </resources>
