--- a/res/xml/bootleg_dumpster_gestures.xml
+++ b/res/xml/bootleg_dumpster_gestures.xml
@@ -37,6 +37,12 @@
         android:summary="@string/gesture_anywhere_summary"
         android:fragment="com.bootleggers.dumpster.gestureanywhere.GestureAnywhereSettings" />
 
+    <Preference
+        android:key="active_edge_category"
+        android:title="@string/active_edge_title"
+        android:summary="@string/active_edge_summary"
+        android:fragment="com.bootleggers.dumpster.external.ActiveEdge" />
+
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="three_finger_gesture"
         android:title="@string/three_finger_gesture"
