--- a/res/xml/bootleg_external_lockscreenui.xml
+++ b/res/xml/bootleg_external_lockscreenui.xml
@@ -115,6 +115,14 @@
                  <extra android:name="fragment" android:value="com.bootleggers.dumpster.external.LockscreenShortcuts" />
         </Preference>
 
+        <Preference
+                android:title="@string/lockscreen_shortcuts_title"
+                android:summary="@string/lockscreen_shortcuts_summary">
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="com.android.systemui"
+                    android:targetClass="com.android.systemui.tuner.LockscreenTunerActivity" />
+        </Preference>
+
     </PreferenceCategory>
 
     <!--<PreferenceCategory
