ActiveEdge: Fix preference to only show with compatible devices [2/3]
Active Edge was showing on all Google devices

Change-Id: Ie0f1b7d9238e546a93affb9f3e1fbe3c3ea54360

--- a/res/xml/bootleg_dumpster_gestures.xml
+++ b/res/xml/bootleg_dumpster_gestures.xml
@@ -38,7 +38,7 @@
         android:fragment="com.bootleggers.dumpster.gestureanywhere.GestureAnywhereSettings" />
 
     <Preference
-        android:key="active_edge_category"
+        android:key="active_edge"
         android:title="@string/active_edge_title"
         android:summary="@string/active_edge_summary"
         android:fragment="com.bootleggers.dumpster.external.ActiveEdge" />
