Active Edge long squeeze support with SmartAction implementation [3/3]
Change-Id: If42a669396e4869b32bc7bd0d5c69b63f0542a0d

--- a/res/xml/bootleg_external_active_edge.xml
+++ b/res/xml/bootleg_external_active_edge.xml
@@ -28,6 +28,10 @@
         android:key="squeeze_selection_smart_action"
         android:title="@string/active_edge_actions_title"/>
 
+    <com.android.settings.smartnav.ActionPreference
+        android:key="long_squeeze_selection_smart_action"
+        android:title="@string/active_edge_long_squeeze_actions_title"/>
+
     <com.bootleggers.dumpster.preferences.CustomSeekBarPreference
         android:key="gesture_assist_sensitivity"
         android:title="@string/active_edge_sensitivity_title"
