Dumpster: Add alternative strings for about bootleg

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -51,6 +51,8 @@
 
     <string name="about_bootleg_title">About Bootleggers</string>
     <string name="about_bootleg_summary">Some info about us, just in case you\'re curious about it</string>
+    <string name="about_bootleg_small_title">About us</string>
+    <string name="about_bootleg_small_summary">Some more info about our project</string>
 
     <!-- DUMPSTER - About Section strings -->
     <string name="bootleg_pref_title_about_us">About us</string>
