--- a/res/values/bootleg_arrays.xml
+++ b/res/values/bootleg_arrays.xml
@@ -1438,4 +1438,16 @@
         <item>10</item>
     </string-array>
 
+    <string-array name="lockscreen_cover_filter_entries">
+        <item>@string/lockscreen_cover_filter_none</item>
+        <item>@string/lockscreen_cover_filter_grayscale</item>
+        <item>@string/lockscreen_cover_filter_blur</item>
+    </string-array>
+
+    <string-array name="lockscreen_cover_filter_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
