--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -34,6 +34,14 @@
         android:summary="@string/media_art_summary"
         android:defaultValue="true" />
 
+    <com.bootleggers.dumpster.preferences.SystemSettingListPreference
+        android:key="lockscreen_album_art_filter"
+        android:title="@string/lockscreen_cover_filter_title"
+        android:entries="@array/lockscreen_cover_filter_entries"
+        android:entryValues="@array/lockscreen_cover_filter_values"
+        android:dependency="lockscreen_media_metadata"
+        android:defaultValue="0" />
+
     <com.bootleggers.dumpster.preferences.SecureSettingSwitchPreference
         android:key="lockscreen_visualizer"
         android:title="@string/lockscreen_visualizer_title"
