--- a/res/xml/bootleg_dumpster_recents.xml
+++ b/res/xml/bootleg_dumpster_recents.xml
@@ -31,4 +31,26 @@
             android:title="@string/recents_icon_pack_title"
             android:summary="@string/recents_icon_pack_summary" />
 
+    <PreferenceCategory
+        android:key="alternative_recents_category"
+        android:title="@string/alternative_recents_category">
+
+        <com.android.settingslib.widget.FooterPreference
+            android:key="swipe_up_enabled_warning"
+            android:selectable="false"
+            android:title="@string/alternative_recents_swipe_up_enabled_warning_summary" />
+
+        <SwitchPreference
+            android:key="use_slim_recents"
+            android:title="@string/slim_recents_title"
+            android:defaultValue="false" />
+
+        <Preference
+            android:key="slim_recents_settings"
+            android:title="@string/slim_recents_settings_title"
+            android:fragment="com.bootleggers.dumpster.external.SlimRecents"
+            android:dependency="use_slim_recents" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
