--- a/res/xml/bootleg_dumpster_recents.xml
+++ b/res/xml/bootleg_dumpster_recents.xml
@@ -18,6 +18,10 @@
     android:title="@string/recents_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <PreferenceCategory
+        android:key="aosp_recents_category"
+        android:title="@string/aosp_recents_category">
+
     <ListPreference
         android:key="recents_layout_style"
         android:title="@string/recents_component_type_title"
@@ -31,9 +35,11 @@
             android:title="@string/recents_icon_pack_title"
             android:summary="@string/recents_icon_pack_summary" />
 
+    </PreferenceCategory>
+
     <PreferenceCategory
-        android:key="alternative_recents_category"
-        android:title="@string/alternative_recents_category">
+        android:key="slim_recents_category"
+        android:title="@string/slim_recents_category">
 
         <com.android.settingslib.widget.FooterPreference
             android:key="swipe_up_enabled_warning"
