--- a/res/xml/bootleg_dumpster_quicksettings.xml
+++ b/res/xml/bootleg_dumpster_quicksettings.xml
@@ -140,6 +140,13 @@
         android:summary="@string/qs_music_tile_track_optional_summary"
         android:defaultValue="false"/>
 
+    <ListPreference
+        android:key="quick_pulldown"
+        android:title="@string/quick_pulldown_title"
+        android:entries="@array/quick_pulldown_entries"
+        android:entryValues="@array/quick_pulldown_values"
+        android:persistent="false" />
+
      <com.bootleggers.dumpster.preferences.SecureSettingSwitchPreference
           android:key="quick_settings_vibrate"
           android:title="@string/quick_settings_vibrate_title"
