[2/2] Extensions: allow disabling quick settings on secure  lock screens
Change-Id: I7cb738fa68d90ec61008640065410493aa964b86
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -1363,4 +1363,8 @@
     <string name="smart_pulldown_dismissable">no dismissable</string>
     <string name="smart_pulldown_ongoing">no ongoing</string>
 
+    <!-- Allow to slide qs on lock -->
+    <string name="lockscreen_qs_disabled_title">Disable quick settings when locked</string>
+    <string name="lockscreen_qs_disabled_summary">Disable expanding quick settings on secure lock screens</string>
+
 </resources>
