Dumpster: The no-no locking v2
This is just a bunch of preventions to users to get their hands on features that won't affect them on various situations. Like in case of not having their lockscreen secured or even thinking on Android Go people who enables it and then whines about features not working. To prevent that, we'll use this big commit locking stuff where it doesn't belong to be tweaked.
All squashed into one commit but it uses some checks for owner info, secured lockscreen, fingerprint and also Go builds because "WHY SHUTDOWN ANIMATIONS DOESNT WORK SUR YOU ROM SUCK"

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -1362,4 +1362,9 @@
     <string name="stock_statusbar_in_hide">Stock statusbar height</string>
     <string name="stock_statusbar_in_hide_summary">Use default statusbar height in Hide</string>
 
+    <!-- The no-no list, messages explaining why some features are disabled -->
+    <string name="no_no_summary_locked">This feature is unavailable because you don\'t have a secured lockscreen. </string>
+    <string name="no_no_summary_go">This feature is unavailable because you have Android Go enabled.</string>
+    <string name="no_no_summary_owner">This feature is unavailable because you don\'t have an owner info message</string>
+
 </resources>
